add css file to index.html file

--- a/Springboot-Web/src/main/resources/static/index.html
+++ b/Springboot-Web/src/main/resources/static/index.html
@@ -3,13 +3,18 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-	<h1>My Contacts</h1>
-	<a href="/list_contact">Click here to list all contacts</a>
-	<br>
-	<a href="/add_contact">Click here to add contact to the database</a>
-	<br>
-	<a href="delete_contact">Click here to delete which you want</a>
+	<div class = "wrapper">
+		<header>My Contacts</header>
+		<div class = "function">
+			<ul>
+				<li class = "contact-list"><a href="/list_contact">Click here to list all contacts</a></li>
+				<li class = "contact-add"><a href="/add_contact">Click here to add contact to the database</a></li>
+				<li class = "contact-delete"><a href="delete_contact">Click here to delete which you want</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
